     also in place of one-step ahead predictions.
   * Fixed a bug which caused an error in suggest_N for nlg_ssm.
   * Fixed a bug which caused incorrect sampling of smoothing distribution for 
     ar1_lg model when predicting past or when using simulation smoother.
   * Fixed a bug which caused an error when predicting past values in 
     multivariate time series case.
   * Fixed sampling of negative binomial distribution in predict method, which 
     used std::negative_binomial which converts non-integer phi to integer. 
     Sampling now uses Gamma-Poisson mixture for simulation.


bssm 1.1.5 (Release date: 2021-06-14)
==============
   * Added explicit check for nsim > 0 in predict method as sample function 
     works with missing argument causing crypting warnings later.
   * Updated drownings data until 2019 and changed the temperature variable
     to an average over three stations.
   * Improved checks for observations and distributions in model building.

bssm 1.1.4 (Release date: 2021-04-13)
==============
   * Better documentation for SV model, and changed ordering of arguments to
     emphasise the recommended parameterization.
   * Fixed predict method for SV model.
   * Removed parallelization in one example which failed on Solaris for some 
     unknown reason.
     
bssm 1.1.3-2 (Release date: 2021-02-24)
==============
   * Fixed missing parenthesis causing compilation fail in case of no OpenMP 
     support.
   * Added pandoc version >= 1.12.3 to system requirements.
   * Restructured C++ classes so no R structures are present in OpenMP regions.

bssm 1.1.3-1 (Release date: 2021-02-22)
==============
   * Fixed PM-MCMC and DA-MCMC for SDE models and added an example to `ssm_sde`.
   * Fixed the state covariance estimates of IS-MCMC, approx-MCMC, and 
     Gaussian MCMC when output_type = "summary".
   * Fixed memory leaks due to uninitialized variables due to aborted particle 
     filter.